2005-11-27  Marcus Crestani  <crestani@xemacs.org>

	* lrecord.h: Remove NEWGC junk.

2005-11-27  Stephen J. Turnbull  <stephen@xemacs.org>

	Build fixes and dead code removal.
	
	* xft-fonts.c (Ffc_pattern_destroy): Delete.
	(syms_of_xft_fonts): Delete Ffc_pattern_destroy and comment out
	Fxft_name_unparse.

	* objects-x.c (DECLARE_DEBUG_FONTNAME): Renamed improved
	SET_DEBUG_FONTNAME.  Remove redundant debug level checks.

2004-12-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* keymap.c (Fwhere_is_internal): Rewrite docstring.

2005-11-26  Stephen J. Turnbull  <stephen@xemacs.org>

	Merge Xft.

    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c: Improve comments.
	
    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* xft-fonts.h:
	* xft-fonts.c:
	* redisplay-x.c:
	Remove or comment out dead code.

    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_find_charset_font): Encapsulate debug print in macro.

    2005-11-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* xft-fonts.h:
	* xft-fonts.c:
	* objects-x.c:
	Xft font names are encoded in UTF-8 (Qxft_font_name_encoding).

    2005-11-06  Stephen J. Turnbull  <stephen@xemacs.org>

	* xft-fonts.h:
	* xft-fonts.c:
	Substitute new *LCRECORD* macros for #ifdef MC_ALLOC.

    2005-09-10  Clemens Fruhwirth  <clemens@endorphin.org>

	* glyphs-x.c (update_widget_face): Wrap error checking of rf in an
	#ifdef USE_XFT.

    2005-09-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_initialize_font_instance): Must encode extname
	twice, Qxft_font_name_encoding != Qx_font_name_encoding.

    2005-09-25  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_finalize_font_instance): Add newline to message.

    2005-09-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_find_charset_font): Give user more control of
	debug verbosity.  Reduce verbosity at debug_xft=1.  Reduce
	verbosity of truename by removing properties that are rarely