@@ -1,3 +1,7 @@
+2005-11-26  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* dumper.c: Move comment to where it apparently belongs.
+
 2005-11-27  Marcus Crestani  <crestani@xemacs.org>
 
 	* lrecord.h: Remove NEWGC junk.
